src/objects/Opportunity_Gate__c/Opportunity_Gate__c.object-meta.xml
<CustomObject>
    <label>Opportunity Tollgate</label>
    <nameField>
        <label>Tollgate</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Tollgates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>