src/objects/Opportunity_Gate__c/fields/Actual_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date__c</fullName>
    <inlineHelpText>The date the Opportunity Phase actually completed</inlineHelpText>
    <label>Actual Date</label>
    <type>Date</type>
</CustomField>