src/objects/Opportunity_Gate__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <inlineHelpText>The date the Opportunity Phase is expected to complete</inlineHelpText>
    <label>Expected Date</label>
    <type>Date</type>
</CustomField>