src/objects/Opportunity_Gate__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Catalog</fullName>
            </value>
            <value>
                <fullName>Focus</fullName>
            </value>
            <value>
                <fullName>Key</fullName>
            </value>
            <value>
                <fullName>Non-Competitive</fullName>
            </value>
            <value>
                <fullName>Competitive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>