src/objects/Opportunity_Gate__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <inlineHelpText>Opportunity Phase</inlineHelpText>
    <label>Tollgate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>