src/objects/Opportunity_Gate__c/fields/Planned_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Planned_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Planned Meeting should be the type of &quot;Opportunity Review&quot; also Opportunity Phase: Expected Date and Planned Meeting: Start Date should be same</inlineHelpText>
    <label>Planned Meeting</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Planned Meeting should be the type of &quot;Opportunity Review&quot; also Opportunity Phase: Expected Date and Planned Meeting: Start Date should be same</errorMessage>
        <filterItems>
            <field>Planned_Meeting__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Opportunity Review</value>
        </filterItems>
        <filterItems>
            <field>$Source.Completion_Date__c</field>
            <operation>equals</operation>
            <valueField>Planned_Meeting__c.Start__c</valueField>
        </filterItems>
        <infoMessage>Planned Meeting should be the type of &quot;Opportunity Review&quot; also Opportunity Phase: Expected Date and Planned Meeting: Start Date should be same</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Planned_Meeting__c</referenceTo>
    <relationshipName>Opportunity_Phase</relationshipName>
    <type>Lookup</type>
</CustomField>