src/objects/Opportunity_Gate__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cultivate</fullName>
            </value>
            <value>
                <fullName>Launch</fullName>
            </value>
            <value>
                <fullName>Offer/Negotiate/Close</fullName>
            </value>
            <value>
                <fullName>Propose</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>