src/objects/Opportunity_Gate__c/validationRules/DatesFuture_Actual.validationRule-meta.xml
<ValidationRule>
    <fullName>DatesFuture_Actual</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
 Actual_Date__c  &gt; Today() 
)</errorConditionFormula>
    <errorMessage>The Actual Date cannot be in the future. Please enter the actual date this activity happened.</errorMessage>
</ValidationRule>