src/objects/Opportunity_Gate__c/validationRules/Enter_RFP_Expected_Date_and_RDE_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_RFP_Expected_Date_and_RDE_Amount</fullName>
    <active>false</active>
    <description>Please enter &quot;RFP Expected Date&quot; and &quot;RDE Amount&quot; for Opportunity. Right click on the Opportunity name hyperlink below and open the Opportunity detail page in a new tab to enter the details.</description>
    <errorConditionFormula>Name  = &apos;Pursue / No-Pursue&apos;  
&amp;&amp;   NOT( ISBLANK( Actual_Date__c ) ) 
 &amp;&amp;  ( ISBLANK( Opportunity__r.RFP_Expected_Date__c )   ||  ISBLANK( Opportunity__r.RDE_Amount__c ) )</errorConditionFormula>
    <errorMessage>Please enter &quot;RFP Expected Date&quot; and &quot;RDE Amount&quot; for the opportunity. Click Cancel below. Return to the Opportunity&apos;s Detail page and update missing data. Return to Opportunity Tollgate and enter data accordingly.</errorMessage>
</ValidationRule>