src/objects/Opportunity_Gate__c/validationRules/Mandate_RFP_Actual_Date_and_RDE_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandate_RFP_Actual_Date_and_RDE_Amount</fullName>
    <active>false</active>
    <description>Mandate RFP Actual Date and RDE Amount on completion of Bid/No-Bid meeting</description>
    <errorConditionFormula>Name  = &apos;Bid / No-Bid  (1.4)&apos;  
&amp;&amp;   NOT( ISBLANK( Actual_Date__c ) ) 
 &amp;&amp;  ( ISBLANK( Opportunity__r.RFP_Receipt_Date__c )   ||  ISBLANK( Opportunity__r.RDE_Amount__c ) )</errorConditionFormula>
    <errorMessage>Please enter &quot;RFP Received Date&quot; and &quot;RDE Amount&quot; for the opportunity.Click Cancel below.  Return to the Opportunity&apos;s Detail page and update missing data.  Return to Opportunity Tollgate and enter data accordingly.</errorMessage>
</ValidationRule>