src/objects/Opportunity_Gate__c/validationRules/Phase_Name_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Phase_Name_cannot_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE(Name) != Name</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Opportunity Tollgate Name cannot be edited</errorMessage>
</ValidationRule>